--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-ARG UBUNTU_VERSION=20.04
+ARG FEDORA_BASE=fedora
+ARG FEDORA_VERSION=34
 ARG YA_CORE_VERSION=0.9.2
 ARG YA_WASI_VERSION=0.2.2
 ARG YA_VM_VERSION=0.2.10
@@ -6,17 +7,16 @@ ARG YA_DIR_BIN=/usr/bin/
 ARG YA_DIR_BIN_TMP=/golem-provider-bin/
 ARG YA_DIR_PLUGINS=/lib/yagna/plugins/
 
-FROM ubuntu:${UBUNTU_VERSION} as installer
+FROM ${FEDORA_BASE}:${FEDORA_VERSION} as installer
 ARG YA_CORE_VERSION
 ARG YA_WASI_VERSION
 ARG YA_VM_VERSION
 ARG YA_DIR_BIN_TMP
 ARG YA_DIR_PLUGINS
-RUN apt-get update -q \
-&& apt-get install -q -y --no-install-recommends \
+RUN dnf install -y \
     wget \
     ca-certificates \
-    xz-utils \
+    xz \
 && mkdir -p ${YA_DIR_BIN_TMP} \
 && mkdir -p ${YA_DIR_PLUGINS} \
 && wget -q "https://github.com/golemfactory/yagna/releases/download/v${YA_CORE_VERSION}/golem-provider-linux-v${YA_CORE_VERSION}.tar.gz" \
@@ -30,14 +30,13 @@ RUN apt-get update -q \
 && cp -R ya-runtime-wasi-linux-v${YA_WASI_VERSION}/* ${YA_DIR_PLUGINS} \
 && cp -R ya-runtime-vm-linux-v${YA_VM_VERSION}/* ${YA_DIR_PLUGINS}
 
-FROM ubuntu:${UBUNTU_VERSION}
+FROM ${FEDORA_BASE}:${FEDORA_VERSION}
 ARG YA_DIR_BIN
 ARG YA_DIR_BIN_TMP
 ARG YA_DIR_PLUGINS
-RUN apt-get update -q \
-&& apt-get install -q -y --no-install-recommends ca-certificates \
-&& apt-get clean -y \
-&& rm -rf /var/lib/apt/lists/*
+RUN dnf install -y ca-certificates \
+&& dnf clean all \
+&& rm -Rf /var/cache/dnf
 COPY --from=installer ${YA_DIR_PLUGINS} ${YA_DIR_PLUGINS}
 COPY --from=installer ${YA_DIR_BIN_TMP} ${YA_DIR_BIN}
 
