--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
 version: "3.7"
 
-services:
+volumes:
+  provider: {}
+  yagna: {}
 
+services:
   node:
     container_name: ${COMPOSE_PROJECT_NAME}_node
     image: aabrioux/golem-node:latest
     restart: always
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ./data-node/ya-provider/:/root/.local/share/ya-provider/
-      - ./data-node/yagna/:/root/.local/share/yagna/
+      - provider:/root/.local/share/ya-provider/
+      - yagna:/root/.local/share/yagna/
     devices:
       - /dev/kvm:/dev/kvm
     environment:
