--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   node:
     # Using a specific name allows there to be one instance per compose project.
     container_name: ${COMPOSE_PROJECT_NAME}
-    image: aabrioux/golem-node:latest
+    image: whalen/golem-node-fedora
     restart: always
     volumes:
       - /etc/localtime:/etc/localtime:ro
