includes overrides for TLS environment variables.
https://github.com/golemfactory/yagna/issues/1336

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,6 +39,9 @@ ARG YA_DIR_PLUGINS
 RUN dnf install -y ca-certificates \
 && dnf clean all \
 && rm -Rf /var/cache/dnf
+ENV \
+SSL_CERT_DIR=/etc/pki/tls/certs/ \
+SSL_CERT_FILE=/etc/pki/tls/certs/ca-bundle.crt
 COPY --from=installer ${YA_DIR_PLUGINS} ${YA_DIR_PLUGINS}
 COPY --from=installer ${YA_DIR_BIN_TMP} ${YA_DIR_BIN}
 
