pull from Fedora's container registery instead of Docker's.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     build:
       context: ./
       dockerfile: docker/Dockerfile
+      args:
+        FEDORA_BASE: registry.fedoraproject.org/fedora
     restart: unless-stopped
     volumes:
       - /etc/localtime:/etc/localtime:ro
