--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,26 +1,26 @@
-name: Upgrade Yagna
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron:  '0 3 * * *'
-
-jobs:
-  update:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - id: update-versions
-        uses: ./.github/actions/update-versions
-      - if: steps.update-versions.outputs.changes != '0'
-        run: |
-          YA_RESOURCES_VERSION=$(curl -s https://api.github.com/repos/golemfactory/ya-installer-resources/releases/latest | jq -r .name | sed s/v//)
-          sed -i -E "s/(ARG YA_RESOURCES_VERSION=)\S+/\1${YA_RESOURCES_VERSION}/" docker/Dockerfile
-      - if: steps.update-versions.outputs.changes != '0'
-        uses: peter-evans/create-pull-request@v5
-        with:
-          commit-message: "chore: upgrade Yagna to v${{ steps.update-versions.outputs.version }}"
-          title: "chore: upgrade Yagna to v${{ steps.update-versions.outputs.version }}"
-          branch: patch/yagna-${{ steps.update-versions.outputs.version }}
-          reviewers:  ${{ github.repository_owner }}
-          delete-branch: true
+#name: Upgrade Yagna
+#
+#on:
+#  workflow_dispatch:
+#  schedule:
+#    - cron:  '0 3 * * *'
+#
+#jobs:
+#  update:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - id: update-versions
+#        uses: ./.github/actions/update-versions
+#      - if: steps.update-versions.outputs.changes != '0'
+#        run: |
+#          YA_RESOURCES_VERSION=$(curl -s https://api.github.com/repos/golemfactory/ya-installer-resources/releases/latest | jq -r .name | sed s/v//)
+#          sed -i -E "s/(ARG YA_RESOURCES_VERSION=)\S+/\1${YA_RESOURCES_VERSION}/" docker/Dockerfile
+#      - if: steps.update-versions.outputs.changes != '0'
+#        uses: peter-evans/create-pull-request@v5
+#        with:
+#          commit-message: "chore: upgrade Yagna to v${{ steps.update-versions.outputs.version }}"
+#          title: "chore: upgrade Yagna to v${{ steps.update-versions.outputs.version }}"
+#          branch: patch/yagna-${{ steps.update-versions.outputs.version }}
+#          reviewers:  ${{ github.repository_owner }}
+#          delete-branch: true
