--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,59 +1,59 @@
-name: Docker Build and Push
-
-on:
-  push:
-    branches:
-      - "master"
-    tags:
-      - 'v*'
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
-
-jobs:
-  docker:
-    runs-on: ubuntu-latest
-    env:
-      DOCKERHUB_REPO: aabrioux/golem-node
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v4
-      -
-        name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.DOCKERHUB_REPO }}
-          tags: |
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/bake-action@v5
-        with:
-          push: ${{ github.event_name != 'pull_request' }}
-          files: |
-            ./docker-bake.hcl
-            ${{ steps.meta.outputs.bake-file }}
-          targets: |
-            image-all
-          set: |
-            *.cache-from=type=gha
-            *.cache-to=type=gha,mode=max
+#name: Docker Build and Push
+#
+#on:
+#  push:
+#    branches:
+#      - "master"
+#    tags:
+#      - 'v*'
+#
+#concurrency:
+#  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+#  cancel-in-progress: true
+#
+#jobs:
+#  docker:
+#    runs-on: ubuntu-latest
+#    env:
+#      DOCKERHUB_REPO: aabrioux/golem-node
+#    steps:
+#      -
+#        name: Checkout
+#        uses: actions/checkout@v4
+#      -
+#        name: Docker meta
+#        id: meta
+#        uses: docker/metadata-action@v5
+#        with:
+#          images: ${{ env.DOCKERHUB_REPO }}
+#          tags: |
+#            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
+#            type=ref,event=branch
+#            type=ref,event=pr
+#            type=semver,pattern={{version}}
+#            type=semver,pattern={{major}}.{{minor}}
+#      -
+#        name: Set up QEMU
+#        uses: docker/setup-qemu-action@v3
+#      -
+#        name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#      -
+#        name: Login to DockerHub
+#        uses: docker/login-action@v3
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#      -
+#        name: Build and push
+#        uses: docker/bake-action@v5
+#        with:
+#          push: ${{ github.event_name != 'pull_request' }}
+#          files: |
+#            ./docker-bake.hcl
+#            ${{ steps.meta.outputs.bake-file }}
+#          targets: |
+#            image-all
+#          set: |
+#            *.cache-from=type=gha
+#            *.cache-to=type=gha,mode=max
